# NFT-IoT-Platform

./: .gitignore
admin/backend/contracts/: DeviceManager.sol
admin/frontend/: package-lock.json  package.json  rollup.config.js
admin/frontend/public/: global.css
admin/frontend/src/: App.svelte
admin/frontend/src/components/: Network.svelte
admin/frontend/src/components/Navigation/: SideBar.svelte
backend/: package.json  truffle-config.js
backend/contracts/: DeviceDatabase.sol  DeviceHub.sol  DeviceManager.sol  DeviceTag.sol  cryptoTag.sol
backend/migrations/: 2_deploy_contracts.js
client/backend/: package-lock.json  package.json
client/backend/contracts/: DeviceTag.sol  IDeviceManager.sol
client/frontend/: package-lock.json  package.json  rollup.config.js
client/frontend/public/: global.css
client/frontend/src/: App.svelte
client/frontend/src/components/: Header.svelte  Loan.svelte
frontend/: package-lock.json  package.json  webpack.config.js
frontend/public/: index.html
frontend/src/: App.css  App.tsx  index.tsx
frontend/src/components/: AdminHub.tsx  BlockExplorer.tsx  ClientPortal.tsx  ConfigFlows.tsx  DeviceAnalytics.tsx  DeviceConfig.tsx  EntryPoint.tsx  Navbar.tsx  OnboardDevice.tsx  Sidenav.tsx  globalStyles.ts
graphql/: Cargo.toml
graphql/src/: main.rs
graphql/src/schema/: admin.rs  blocks.rs  chainData.rs  chain_data.rs  client.rs  devices.rs  mod.rs  mutation.rs  query.rs  subsription.rs
graphql/src/server/: helpers.rs  mod.rs  routes.rs
graphql/src/server/abi/: DeviceHub.json  DeviceTag.json
