[package]
name = "graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

futures = "0.3.17"
tokio = { version = "1.15.0", features = ["full"] }
tokio-stream = "0.1.8"
serde = "1.0.132"
serde_json = "1.0.73"
rocket = "0.5.0-rc.1"
async-graphql = "3.0"
async-graphql-rocket = "3.0.17"
web3 = "0.17.0"
hex-literal = "0.3.4"
hex = "0.4.3"




